# iort_sketch

./: .gitignore  CMakeLists.txt  README.md
Common/: CMakeLists.txt  rtHeaderMain.cpp  rtHeaderMain.h
Maths/: CMakeLists.txt  rtMath.cpp  rtMath.h
Raytracer/: CMakeLists.txt  main.cpp
